upd add field version on document

--- a/site/lk-new.html
+++ b/site/lk-new.html
@@ -475,6 +475,12 @@
                 </div>
               </div>
               <div class="lineedit">
+                <div class="lineedit__name">Версия документы</div>
+                <div class="lineedit__con">
+                  <input type="text" placeholder="" value="Версия документа" class="inp-field inp-field_500">
+                </div>
+              </div>
+              <div class="lineedit">
                 <div class="lineedit__name">Изображение</div>
                 <div class="lineedit__con">
                   <div class="formgroup articles__edit-images">
