--- a/site/main.html
+++ b/site/main.html
@@ -608,11 +608,11 @@
                                       </div>
                                     </div>
                                     <div class="item">
-                                      <div class="iname"><a href="#">Автоматизированный учебно-исследовательский комплекс «Логос»</a></div>
+                                      <div class="iname"><a href="#">автоматизированный учебно-исследовательский комплекс «логос»</a></div>
                                       <div class="itext">
                                          
-                                        Проведение практических, лабораторных и исследовательских работ на базе реального оборудования
-                                        <br><br><a href="#" class="link-orange">СибГИУ </a>
+                                        проведение практических, лабораторных и исследовательских работ на базе реального оборудования
+                                        <br><br><a href="#" class="link-orange">сибгиу </a>
                                       </div>
                                       <div class="irating"><span>Рейтинг</span>
                                         <ul>
