upd search form
add reset btn

--- a/site/equipments-static.html
+++ b/site/equipments-static.html
@@ -401,13 +401,14 @@
             <div class="search-con">
               <form action="#">
                 <input type="text" placeholder="Быстрый поиск по услугам" class="inp-text">
-                <input type="submit" value="" class="inp-submit">
+                <input type="submit" value="" class="inp-submit_with-reset">
+                <input type="button" value="Сбросить фильтр" class="inp-reset">
               </form>
             </div>
             <div class="articles">
                           <div class="item-edit-con item-edit-con_pad js-edit-item-box">
                             <div class="articles__item">
-                              <div class="articles__item-thumb"><img src="img/content/edit-page/1.png" alt=""></div>
+                              <div class="articles__item-thumb"><a href="img/content/640-360-1.jpg" data-lightbox="image-1" data-title="Станок токарный с ЧПУ"><img src="img/content/edit-page/1.png" alt=""></a></div>
                               <div class="articles__item-info">
                                 <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
                                 <div class="articles__item-title">Короткое название</div>
@@ -472,7 +473,7 @@
                           </div>
                           <div class="item-edit-con item-edit-con_pad js-edit-item-box">
                             <div class="articles__item">
-                              <div class="articles__item-thumb"><img src="img/content/edit-page/1.png" alt=""></div>
+                              <div class="articles__item-thumb"><a href="img/content/640-360-1.jpg" data-lightbox="image-1" data-title="Станок токарный с ЧПУ"><img src="img/content/edit-page/1.png" alt=""></a></div>
                               <div class="articles__item-info">
                                 <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
                                 <div class="articles__item-title">ВИИФ-2014 является крупнейшей многоотраслевой выставкой</div>
@@ -537,7 +538,7 @@
                           </div>
                           <div class="item-edit-con item-edit-con_pad js-edit-item-box">
                             <div class="articles__item">
-                              <div class="articles__item-thumb"><img src="img/content/edit-page/1.png" alt=""></div>
+                              <div class="articles__item-thumb"><a href="img/content/640-360-1.jpg" data-lightbox="image-1" data-title="Станок токарный с ЧПУ"><img src="img/content/edit-page/1.png" alt=""></a></div>
                               <div class="articles__item-info">
                                 <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
                                 <div class="articles__item-title">ВИИФ-2014</div>
@@ -602,7 +603,7 @@
                           </div>
                           <div class="item-edit-con item-edit-con_pad js-edit-item-box">
                             <div class="articles__item">
-                              <div class="articles__item-thumb"><img src="img/content/edit-page/1.png" alt=""></div>
+                              <div class="articles__item-thumb"><a href="img/content/640-360-1.jpg" data-lightbox="image-1" data-title="Станок токарный с ЧПУ"><img src="img/content/edit-page/1.png" alt=""></a></div>
                               <div class="articles__item-info">
                                 <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
                                 <div class="articles__item-title">Lorem ipsum.</div>
@@ -667,7 +668,7 @@
                           </div>
                           <div class="item-edit-con item-edit-con_pad js-edit-item-box">
                             <div class="articles__item">
-                              <div class="articles__item-thumb"><img src="img/content/edit-page/1.png" alt=""></div>
+                              <div class="articles__item-thumb"><a href="img/content/640-360-1.jpg" data-lightbox="image-1" data-title="Станок токарный с ЧПУ"><img src="img/content/edit-page/1.png" alt=""></a></div>
                               <div class="articles__item-info">
                                 <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
                                 <div class="articles__item-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum rem, vitae culpa consectetur vero odit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur fuga cumque rem aliquam fugiat, qui esse iste ab dicta sunt, a incidunt non magnam, adipisci, voluptates. Porro beatae veniam dolor.</div>
