--- a/site/edit-interface.html
+++ b/site/edit-interface.html
@@ -396,7 +396,7 @@
               <li><a href="#">Редактирование контента</a></li>
             </ul>
           </div>
-          <div class="main-left">
+          <div class="main-full">
             <div class="tabs-box edit-interface">
               <ul class="tabs js-tabs">
                 <li class="tabs__item"><a href="#js-tab-news" class="tabs__link">Новости</a></li>
