upd add status link

--- a/site/equipments-static.html
+++ b/site/equipments-static.html
@@ -417,9 +417,10 @@
                                   <div class="views"><a href="#">225</a></div>
                                 </div>
                               </div>
-                              <ul class="articles__item-controls articles__item-controls_pad inline">
-                                <li class="articles__item-controls-edit js-edit-link"></li>
-                                <li class="articles__item-controls-delete"></li>
+                              <ul class="admin-box admin-box_line-padding">
+                                <li class="admin-edit js-edit-link"></li>
+                                <li class="admin-delete"></li>
+                                <li class="admin-status"></li>
                               </ul>
                             </div>
                             <div class="articles__edit js-edit-item">
@@ -482,9 +483,10 @@
                                   <div class="views"><a href="#">225</a></div>
                                 </div>
                               </div>
-                              <ul class="articles__item-controls articles__item-controls_pad inline">
-                                <li class="articles__item-controls-edit js-edit-link"></li>
-                                <li class="articles__item-controls-delete"></li>
+                              <ul class="admin-box admin-box_line-padding">
+                                <li class="admin-edit js-edit-link"></li>
+                                <li class="admin-delete"></li>
+                                <li class="admin-status"></li>
                               </ul>
                             </div>
                             <div class="articles__edit js-edit-item">
@@ -547,9 +549,10 @@
                                   <div class="views"><a href="#">225</a></div>
                                 </div>
                               </div>
-                              <ul class="articles__item-controls articles__item-controls_pad inline">
-                                <li class="articles__item-controls-edit js-edit-link"></li>
-                                <li class="articles__item-controls-delete"></li>
+                              <ul class="admin-box admin-box_line-padding">
+                                <li class="admin-edit js-edit-link"></li>
+                                <li class="admin-delete"></li>
+                                <li class="admin-status"></li>
                               </ul>
                             </div>
                             <div class="articles__edit js-edit-item">
@@ -612,9 +615,10 @@
                                   <div class="views"><a href="#">225</a></div>
                                 </div>
                               </div>
-                              <ul class="articles__item-controls articles__item-controls_pad inline">
-                                <li class="articles__item-controls-edit js-edit-link"></li>
-                                <li class="articles__item-controls-delete"></li>
+                              <ul class="admin-box admin-box_line-padding">
+                                <li class="admin-edit js-edit-link"></li>
+                                <li class="admin-delete"></li>
+                                <li class="admin-status"></li>
                               </ul>
                             </div>
                             <div class="articles__edit js-edit-item">
@@ -677,9 +681,10 @@
                                   <div class="views"><a href="#">225</a></div>
                                 </div>
                               </div>
-                              <ul class="articles__item-controls articles__item-controls_pad inline">
-                                <li class="articles__item-controls-edit js-edit-link"></li>
-                                <li class="articles__item-controls-delete"></li>
+                              <ul class="admin-box admin-box_line-padding">
+                                <li class="admin-edit js-edit-link"></li>
+                                <li class="admin-delete"></li>
+                                <li class="admin-status"></li>
                               </ul>
                             </div>
                             <div class="articles__edit js-edit-item">
