--- a/site/reports.html
+++ b/site/reports.html
@@ -427,8 +427,88 @@
                   <div class="days"><a href="#change" class="js-change-dates">вчера		</a><a href="#change" class="js-change-dates">неделю		</a><a href="#change" class="js-change-dates">месяц		</a><a href="#change" class="js-change-dates">все время		</a></div>
                 </div>
               </div>
-              <div class="lineedit"><a href="#" class="btn-orange-wide inline">Построить отчет</a></div>
+              <div class="lineedit"><a href="#report-add-table" class="btn-orange-wide inline">Построить отчет</a></div>
             </div>
+          </div>
+        </div>
+        <div data-remodal-id="report-add-table" class="remodal">
+          <div class="popedit">
+            <div class="popedit__name">
+               
+              Построить отчет
+              <div class="desc">о добавлении новых объектов каталогизации</div>
+            </div>
+            <div class="box-info">
+              <div class="box">
+                <div class="bname">
+                  <h3>Конструктор отчетов</h3>
+                </div>
+                <div class="bcon bcon-mod">
+                  <table class="table-ind">
+                    <thead>
+                      <tr>
+                        <td class="num">#</td>
+                        <td>Вуз</td>
+                        <td>Краткое описание</td>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td class="num">1</td>
+                        <td>ТПУ</td>
+                        <td> <a href="#">Автолаборатория для проведения энергетического обследования на базе ГАЗ-27527</a></td>
+                      </tr>
+                      <tr>
+                        <td class="num">2</td>
+                        <td>ТУСУР</td>
+                        <td> <a href="#">Автомат установки компонентов: АРС L40</a></td>
+                      </tr>
+                      <tr>
+                        <td class="num">3</td>
+                        <td>КамГУ им. В.Беринга</td>
+                        <td> <a href="#">Автоматизированная система пробоподготовки для петрографических и минераграфических исследований </a></td>
+                      </tr>
+                      <tr>
+                        <td class="num">4</td>
+                        <td>АмГПГУ</td>
+                        <td> <a href="#">Автоматизированная система управлением освещением </a></td>
+                      </tr>
+                      <tr class="is-active">
+                        <td class="num">5</td>
+                        <td>ТюмГНГУ</td>
+                        <td> <a href="#">Автоматизированная установка для исследования эксплуатационных характеристик продуктивных пластов FDS-350 VINCI TECHNOLOGIES </a></td>
+                      </tr>
+                      <tr>
+                        <td class="num">6</td>
+                        <td>СибГИУ</td>
+                        <td> <a href="#">Автоматизированная установка низкотемпературного моделирования саморегулирующегося струйно-эмульсионного реактора. </a></td>
+                      </tr>
+                      <tr>
+                        <td class="num">7</td>
+                        <td>ЮЗГУ</td>
+                        <td> <a href="#">Автоматизированное рабочее место конструктора АРМК (ПК с 3-мя мониторами,антенное поворотное устр-во, радиостанция,видеоадаптер) </a></td>
+                      </tr>
+                      <tr>
+                        <td class="num">8</td>
+                        <td>КНИТУ</td>
+                        <td> <a href="#">Автоматизированное рабочее место многодисциплинарного структурного анализа (США)</a></td>
+                      </tr>
+                      <tr>
+                        <td class="num">9</td>
+                        <td>КНИТУ</td>
+                        <td> <a href="#">Автоматизированное рабочее место по созданию сложных конструкций и агрегатов перспективных транспортных средств на основе твердотельного 3D моделирования (США) </a></td>
+                      </tr>
+                      <tr>
+                        <td class="num">10</td>
+                        <td>КНИТУ</td>
+                        <td> <a href="#">Автоматизированное рабочее место расчета статической и динамической прочности (США) 		</a></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            <div class="action"><a href="#report-add" class="btn-orange-wide inline">Построить отчет</a></div>
           </div>
         </div>
         <div class="main-width main-wrap">
