upd report sort table

--- a/site/reports-table.html
+++ b/site/reports-table.html
@@ -397,9 +397,9 @@
                   <thead>
                     <tr>
                       <td class="num">#</td>
-                      <td class="cat"><a href="#" class="sort-link is-active">Область <br>применения <span></span></a></td>
-                      <td class="name"><a href="#" class="sort-link">Наименование<span></span></a></td>
-                      <td class="date"><a href="#" class="sort-link">Дата обновления<span></span></a></td>
+                      <td class="cat"><a href="#" class="sort-link lines">Область <br>применения <span></span></a></td>
+                      <td class="name"><a href="#" class="sort-link is-active">Наименование<span></span></a></td>
+                      <td class="date"><a href="#" class="sort-link is-active is-sort">Дата обновления<span></span></a></td>
                     </tr>
                   </thead>
                   <tbody>
@@ -434,7 +434,7 @@
                   <thead>
                     <tr>
                       <td class="num">#</td>
-                      <td class="cat"><a href="#" class="sort-link is-active">Область <br>применения <span></span></a></td>
+                      <td class="cat"><a href="#" class="sort-link lines is-active">Область <br>применения <span></span></a></td>
                       <td class="name"><a href="#" class="sort-link">Наименование<span></span></a></td>
                       <td class="date"><a href="#" class="sort-link">Дата обновления<span></span></a></td>
                     </tr>
